--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "random-chat",
   "version": "1.0.0",
   "main": "app.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
